# -Agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
evaluation/: build_golden.py  retrieval_eval.py
scripts/: chat_cli.py
src/appliance_agent/: __init__.py  agent.py  config.py  flow_engine.py  guardrail.py  ingestion.py  models.py  retrieval.py  text.py
src/appliance_agent/api/: __init__.py  app.py
tests/: conftest.py  test_agent.py  test_api.py  test_guardrail.py  test_ingestion.py  test_retrieval.py
原始数据/faq/: faq.jsonl
原始数据/flows/: troubleshooting_flow_tree.yaml
原始数据/knowledge_base/: fault_codes.yaml  reference_based_common_issues.yaml
原始数据/manuals/: W80_top_load_washer_manual.md  X100_front_load_washer_manual.md  X200_washer_dryer_manual.md
原始数据/policies/: after_sales_policy.md  safety_boundaries.md  service_fee_rules.yaml
原始数据/tickets/: historical_tickets.jsonl
